--- a/kides Abc/style.css
+++ b/kides Abc/style.css
@@ -8,8 +8,6 @@ body{
 
 /* TOP-BTN */
 .top{
-    margin-left: 1190px;
-    margin-top: 200px;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 50px;
     position: fixed;
@@ -18,6 +16,7 @@ body{
     background: #000;
     height: 40px;
     text-align: center; 
+    top: 600px;
     right: 20px;
 }
 .top a{
@@ -67,7 +66,6 @@ nav ul li a{
     border: 2px solid rgb(113, 105, 105);
     border-radius: 30px;
     margin:100px 0 0 150px; 
-    /* background-image: url(imgs/bgimg5.jpg); */
     box-shadow: 20px 30px 25px black;
 }
 .maincard .cards  img{
@@ -77,7 +75,6 @@ nav ul li a{
     float: right;
 }
 .maincard .cards p{
-    /* text-align: left; */
     align-items: center;
     margin-top: 0px;
     color: rgb(237, 142, 0);
@@ -100,3 +97,28 @@ nav ul li a{
     padding-left: 240px;
 }
 
+@media screen and (max-width:2560px) and (min-width:1441px){
+    nav ul li a{
+         font-size: 50px;
+    }
+    nav {
+        margin-left: 300px;   
+    }
+    .names {
+        margin-left: 450px;
+    }
+    .maincard .cards{
+        margin-left: 300px;
+    }
+    .top{
+        width: 120px;
+        height: 100px;
+    }
+    .top a{
+       font-size: 40px;
+    }
+    .m-n-q-w img{
+        padding-left: 1240px;
+    }
+    
+}
