--- a/fetch date/style.css
+++ b/fetch date/style.css
@@ -7,7 +7,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.cardContainer {
+.Container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
